fixed text on mobile screen

--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,12 @@ body {
   color: #8CD8BD;
   text-decoration: none;
 }
+
+#katie {
+  color: #243665;
+}
+
+#katie:hover {
+  text-decoration: none;
+  color: #8CD8BD;
+}
