--- a/src/components/services/Services.css
+++ b/src/components/services/Services.css
@@ -45,3 +45,7 @@ h1, h2, h3, h4 {
 .list-group-item-primary h4 {
   color: #fff;
 }
+
+@media (max-width: 992px) {
+  .main-p h3 {font-size: 12px;}
+}
